--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="about_us">We are a local mobile e-commerce platform that is transforming the shopping experience for people like you, by connecting them to local stores. We aim to become the one-stop shop for all your needs.\nUsers can order through the app and get everything delivered to their doorstep, quickly.</string>
 </resources>
